# adventofcode

./: .bazelrc  .gitignore  .shellcheckrc  Makefile  README.md  WORKSPACE  clang.cfg  compile_flags.txt  justfile  pmd-ruleset.xml  pyproject.toml  requirements.txt  run_py.bat  setup.yml
.github/workflows/: action-aoc-badges-2021.yml  action-aoc-badges-2022.yml  action-aoc-badges-2023.yml  action-aoc-badges-2024.yml  action-aoc-badges.yml  action-aoc-badges_2025.yml
2020/: AoC2015_07.java  AoC2020_04.py  AoC2020_06.py  AoC2020_08.py  AoC2020_09.py  AoC2020_1.py  AoC2020_10.py  AoC2020_11.py  AoC2020_12.py  AoC2020_13.py  AoC2020_14.py  AoC2020_15.py  AoC2020_16.py  AoC2020_17.py  AoC2020_18.py  AoC2020_19.py  AoC2020_2.py  AoC2020_20.java  AoC2020_20.py  AoC2020_21.py  AoC2020_22.java  AoC2020_22.py  AoC2020_23.py  AoC2020_24.py  AoC2020_25.py  AoC2020_3.py  AoC2020_4.py  AoC2020_5.py  AoC2020_6.py  AoC2020_7.py  AoC2020_8.py  AoC2020_9.py  common.py  geometry.py  my_aocd.py  navigation.py  requirements.txt
doc/: concepts.md  concepts.yml
src/main/bash/: AoC2015_01.sh  AoC2015_02.sh  AoC2015_03.sh  AoC2015_04.sh  AoC2015_05.sh  AoC2015_09.sh  AoC2015_10.sh  AoC2015_14.sh  AoC2016_01.sh  AoC2016_02.sh  AoC2016_03.sh  AoC2016_04.sh  AoC2016_06.sh  AoC2016_07.sh  AoC2016_08.sh  AoC2016_09.sh  AoC2017_01.sh  AoC2017_02.sh  AoC2017_04.sh  AoC2017_05.sh  AoC2019_08.sh  AoC2021_01.sh  AoC2021_02.sh  AoC2021_13.sh  AoC2022_01.sh  AoC2022_02.sh  AoC2022_03.sh  AoC2022_04.sh  AoC2022_06.sh  AoC2022_07.sh  AoC2022_10.sh  AoC2022_25.sh  AoC2025_01.sh  AoC2025_02.sh  (+12 more)
(+1023 files in other folders)
