[project]
name = "adventofcode"
version = "1.0.0"
description = "Advent of Code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "advent-of-code-data==1.3.2",
    "advent-of-code-ocr>=1.1.0",
    "junitparser==3.2",
    "prettyprinter>=0.18.0",
    "pyyaml>=6.0.2",
    "setuptools==80",
    "tqdm>=4.67.1",
]

[tool.vulture]
exclude = [".venv"]
min_confidence = 80

[tool.bandit]
exclude_dirs = [".venv"]
skips = ["B101"]

[tool.isort]
profile = "black"
line_length = 79
force_single_line = true
skip_gitignore = true
include_trailing_comma = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM", "D1", "FIX002", "PLR2004", "PT", "S101", "T20", "TD"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "aocd.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prettyprinter.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "advent_of_code_ocr.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pebble.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "junitparser.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "termcolor.*"
ignore_missing_imports = true
